/*
 * Copyright (C) 2025 Kevin Buzeau
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
syntax = "proto3";
option java_multiple_files = true;

package com.buzbuz.smartautoclicker.core.smart.debugging;

import "CounterStateChange.proto";

/** Details about an TriggerEvent that has been triggered during a detection session. */
message TriggerEventMessage {

    /** The unique identifier of the TriggerEvent that has been triggered. */
    int64 eventId = 1;

    /** The list of results for the conditions verified for this event. */
    repeated TriggerConditionResult results = 2;

    /** List of counter changes triggered by the actions of the image event. */
    repeated CounterStateChange counterStateChanges = 5;


    /** The results for an TriggerCondition that has been checked during event validation. */
    message TriggerConditionResult {

        /** The unique identifier of the TriggerCondition. */
        int64 conditionId = 1;

        /** Tells if the condition have been considered as fulfilled or not. */
        bool isFulfilled = 2;
    }
}